[package]
name = "tupparser"
version = "0.1.0"
edition = "2021"
authors = ["Arun Sivaramakrishnan <arun.sivaramakrishnan@gmail.com>"]

[lib]
name = "tupparser"
path = "lib/mod.rs"

[dependencies]
nom = "7.1.3"
nom_locate = "4.2.0"
thiserror = "2.0.12"
regex = "1.11.1"
walkdir = "2.5.0"
log = "0.4.27"
mlua = { version = "0.10.3", features = ["lua54", "vendored"] }
crossbeam-channel= "0.5.14"
parking_lot = "0.12.3"
hashbrown = { version = "0.15.2", features = [] }
tinyset = "0.5.2"
sha2 = "0.10.8"
hex = "0.4.3"
nonempty = "0.11.0"
tuppaths = { path = "../tuppaths" }
tupcompat = { path = "../tupcompat" }

[dev-dependencies]
env_logger = "0.11.6"
insta = { version = "1.42", features = ["json", "filters"] }
