[package]
name = "tupparser"
version = "0.1.0"
edition = "2021"
authors = ["Arun Sivaramakrishnan <arun.sivaramakrishnan@gmail.com>"]

[lib]
name = "tupparser"
path = "lib/mod.rs"

[dependencies]
nom = "8.0.0"
nom_locate = "5.0.0"
nom-language = "0.1.0"
thiserror = "2.0.17"
regex = "1.12.2"
walkdir = "2.5.0"
log = "0.4.29"
mlua = { version = "0.11.5", features = ["lua54", "vendored"] }
crossbeam-channel= "0.5.14"
parking_lot = "0.12.3"
hashbrown = { version = "0.16.1", features = [] }
tinyset = "0.5.2"
sha2 = "0.10.8"
hex = "0.4.3"
nonempty = "0.12.0"
tuppaths = { path = "../tuppaths" }
tupcompat = { path = "../tupcompat" }

[dev-dependencies]
env_logger = "0.11.6"
insta = { version = "1.42", features = ["json", "filters"] }
